--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,8 @@ section:nth-child(1) div{
     position: absolute;
     width: 1.8rem;
     height: 1.8rem;
-    background-color: red;
+    background: url("../images/h5-30.png") center no-repeat;
+    background-size: cover;
 }
 section:nth-child(1) p{
     padding-left: 2.1rem;
@@ -42,16 +43,17 @@ section:nth-child(1) p:last-child{
 section:nth-child(1) p:last-child span{
     font-size: .42rem;
 }
-section:nth-child(2){
+section:nth-child(3){
+    margin-bottom: .2rem;
     padding-bottom: .3rem;
     border-bottom: 1px solid #ededed;
 }
-section:nth-child(2) div p{
+section:nth-child(3) div p{
     font-size: .26rem;
     line-height: .65rem;
     color: #6f727b;
 }
-section:nth-child(2) div ul li{
+section:nth-child(3) div ul li{
     float: left;
     margin-right: .3rem;
     padding: 0 .3rem;
@@ -63,34 +65,33 @@ section:nth-child(2) div ul li{
     border: 1px solid #cccccc;
     border-radius: 3px;
 }
-section:nth-child(2) div:nth-child(2) ul li{
+section:nth-child(3) div:nth-child(2) ul li{
     padding: 0 .55rem;
 }
-section:nth-child(2) div ul li.active{
+section:nth-child(3) div ul li.active{
     color: #ed276a;
     border-color: #ed276a;
 }
-section:nth-child(3){
-    margin-bottom: .2rem;
+section:nth-child(2){
     height: 1.4rem;
     border-bottom: 1px solid #ededed;
 }
-section:nth-child(3) p{
+section:nth-child(2) p{
     float: left;
     margin-top: .1rem;
     font-size: .24rem;
     color: #6f727b;
 }
-section:nth-child(3) ul{
+section:nth-child(2) ul{
     margin-left: .6rem;
     padding-top: .1rem;
 }
-section:nth-child(3) ul li{
+section:nth-child(2) ul li{
     margin-bottom: .1rem;
     font-size: .22rem;
     color: #333333;
 }
-section:nth-child(3) ul li span{
+section:nth-child(2) ul li span{
     display: inline-block;
     margin-right: .2rem;
     width: 1.2rem;
@@ -206,7 +207,7 @@ section:nth-child(7) form:last-child{
 section:nth-child(8){
     margin: 1px 0 .2rem 0;
     padding: .3rem;
-    height: 2.7rem;
+    height: 3rem;
 }
 section:nth-child(8) p:nth-child(1){
     float: left;
@@ -230,6 +231,18 @@ section:nth-child(8) p:nth-child(3){
     padding-left: 1.7rem;
     font-size: .18rem;
     line-height: .48rem;
+    color: #999999;
+}
+section:nth-child(8) input{
+    margin: .05rem .1rem 0 .8rem;
+    padding: 0;
+    width: .2rem;
+    height: .2rem;
+    border: 1px solid #cccccc;
+    -webkit-appearance: checkbox;
+}
+section:nth-child(8) label{
+    font-size: .18rem;
     color: #999999;
 }
 section:nth-child(8) a{
@@ -268,4 +281,49 @@ section:nth-child(9) div{
 }
 section:nth-child(9) div.active{
     display: block;
+}
+section:nth-child(9) div:nth-child(2) span{
+    display: block;
+    width: 7.5rem;
+}
+section:nth-child(9) div:nth-child(2) span:nth-child(1){
+    height: 3.63rem;
+    background: url("../images/sm_30_01.png") center no-repeat;
+    background-size: cover;
+}
+section:nth-child(9) div:nth-child(2) span:nth-child(2){
+    height: 3.64rem;
+    background: url("../images/sm_30_02.png") center no-repeat;
+    background-size: cover;
+}
+section:nth-child(9) div:nth-child(2) span:nth-child(3){
+    height: 3.63rem;
+    background: url("../images/sm_30_03.png") center no-repeat;
+    background-size: cover;
+}
+section:nth-child(9) div:nth-child(2) span:nth-child(4){
+    height: 3.64rem;
+    background: url("../images/sm_30_04.png") center no-repeat;
+    background-size: cover;
+}
+section:nth-child(9) div:nth-child(2) span:nth-child(5){
+    height: 3.63rem;
+    background: url("../images/sm_30_05.png") center no-repeat;
+    background-size: cover;
+}
+section:nth-child(9) div:nth-child(3),section:nth-child(9) div:nth-child(4){
+    padding: 0 .3rem 0 .65rem;
+}
+section:nth-child(9) div:nth-child(3) h3,section:nth-child(9) div:nth-child(4) h3{
+    margin: .1rem 0 .1rem -.35rem;
+    font-size: .26rem;
+    color: #666666;
+}
+section:nth-child(9) div:nth-child(3) p,section:nth-child(9) div:nth-child(4) p{
+    font-size: .22rem;
+    text-indent: -.35rem;
+    color: #999999;
+}
+section:nth-child(9) div:nth-child(3) p span,section:nth-child(9) div:nth-child(4) p span{
+    color: #ff0000;
 }
